# huggingface-etl-co2emissions

./: .gitignore  Makefile  README.md  pyproject.toml  replace.sh  requirements-dev.txt  requirements.txt
.obsidian/: workspace.json
iac/environments/dev/: dynamo-db.tf  glue.tf  glue_consolidation.tf  glue_discovery.tf  kms.tf  lambda.tf  locals.tf  main.tf  outputs.tf  providers.tf  s3.tf  secrets.tf  security_base.tf  security_policies.tf  tfplan  variables.tf  workflow.tf
iac/modules/dynamo-db/: main.tf  outputs.tf  variables.tf
iac/modules/glue-discovery/: main.tf  outputs.tf  variables.tf
iac/modules/glue-job/: main.tf  variables.tf
iac/modules/glue-job/tests/: glue.tftest.hcl
iac/modules/glue_enrichment/: main.tf  outputs.tf  variables.tf
iac/modules/kms/: main.tf  outputs.tf  variables.tf
iac/modules/lambda/: main.tf  variables.tf  vatriables.tf
iac/modules/lambda/tests/: lambda.tftest.hcl
iac/modules/s3_etl/: main.tf  outputs.tf  policies.tf  variables.tf  versions.tf
iac/modules/s3_etl/tests/: bucket.tftest.hcl
iac/modules/security/: main.tf  outputs.tf  policies.tf  variables.tf
iac/modules/security/tests/: lambda.role.tftest.hcl  security.tftest.hcl
iac/modules/security_base/: main.tf  outputs.tf  variables.tf
iac/modules/security_policies/: main.tf  variables.tf
iac/modules/workflow/: main.tf  variables.tf
iac/modules/workflow/tests/: worflow.tftest.hcl
makefiles/: deploys.mk  tests.mk
src/domain/extract/: extract_dataset.py
src/infrastructure/in/glue/: data_extraction.py  discovery.py  gold_consolidation.py  raw_ingestion.py
src/infrastructure/in/lambda/: data_preparation_job.py
src/infrastructure/in/notebooks/: Untitled.ipynb  Untitled1.ipynb  fullcall.ipynb
tests/application/: raw_ingestion.py
tests/domain/extract/: extract_raw_model.py  test_extract_dataset.py
tests/infrastructure/in/glue/: config.py  glue_args.py  main.py
(+6 files in other folders)
